--- a/index.html
+++ b/index.html
@@ -86,11 +86,12 @@
           Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
         </p>
         <span class="button">Поиск гостиницы в Седоне</span>
-        <!-->Форма</-->
+        <!--Форма-->
       </section>
       
       <section class="map">
-        <img src="http://placehold.it/1200x594" alt="Карта">
+        <h2 class="visually-hidden">Карта</h2>
+        <img src="http://placehold.it/1200x594" width="1200" height="594" alt="Карта">
       </section>
     </main>
     
@@ -105,7 +106,7 @@
       </div>
       <div class="footer-copyright">
         <p>Website by</p>
-        <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="http://placehold.it/115x41" alt="Логотип HTML-Академии"></a>
+        <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="http://placehold.it/115x41" width="115" height="41" alt="Логотип HTML-Академии"></a>
       </div>
     </footer>
   </body>
