--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <main class="index-main">
         <div class="intro">
-          <img src="img/background.jpg" width="1200" height="800" alt="Пейзаж Седоны">
+          <img src="img/words.png" width="458" height="352" alt="Welcom to the gorgeous Sedona 'Because the Grand Canyon sucks!'">
         </div>
         <div class="promo">
           <h1 class="main-title">Седона - небольшой городок в аризоне, заслуживающий большего!</h1>
