--- a/hotels.html
+++ b/hotels.html
@@ -24,7 +24,59 @@
         <h1 class="visually-hidden">Поиск гостиницы</h1>
         <section class="filters">
           <h2 class="visually-hidden">Фильтр товаров</h2>
-          <!--Форма-->
+          <form class="filter-form" method="get" action="https://echo.htmlacademy.ru">
+            <fieldset class="filter-form-infrastructure">
+              <legend>Инфраструктура:</legend>
+              <ul>
+                <li class="filter-form-option">
+                  <input class="visually-hidden" type="checkbox" name="pool" id="filter-pool" checked>
+                  <label class="filter-form-label" for="filter-pool">Бассейн</label>
+                </li>
+                <li class="filter-form-option">
+                  <input class="visually-hidden" type="checkbox" name="parking" id="filter-parking">
+                  <label class="filter-form-label" for="filter-parking">Парковка</label>
+                </li>
+                <li class="filter-form-option">
+                  <input class="visually-hidden" type="checkbox" name="wifi" id="filter-wifi">
+                  <label class="filter-form-label" for="filter-wifi">Wi-Fi</label>
+                </li>
+              </ul>
+            </fieldset>
+            <fieldset class="filter-form-housing">
+              <legend>Тип жилья:</legend>
+              <ul>
+                <li class="filter-form-option">
+                  <input class="visually-hidden" type="checkbox" name="hotel" id="filter-hotel" checked>
+                  <label class="filter-form-label" for="filter-hotel">Гостиница</label>
+                </li>
+                <li class="filter-form-option">
+                  <input class="visually-hidden" type="checkbox" name="motel" id="filter-motel" checked>
+                  <label class="filter-form-label" for="filter-motel">Мотель</label>
+                </li>
+                <li class="filter-form-option">
+                  <input class="visually-hidden" type="checkbox" name="apartments" id="filter-apartments" checked>
+                  <label class="filter-form-label" for="filter-apartments">Апартаменты</label>
+                </li>
+              </ul>
+            </fieldset>
+            <fieldset class="filter-form-cost">
+              <legend>Стоимость в сутки (Р):</legend>
+              <div class="scale"> 
+                <div class="diapason"></div> 
+                <div class="toggle toggle-min"></div> 
+                <div class="toggle toggle-max"></div> 
+              </div>
+              <p class="cost-range">
+                <label class="cost-range-label">От
+                  <input class="cost-range-input" type="text" name="cost-min">
+                </label>
+                <label class="cost-range-label">До
+                  <input class="cost-range-input" type="text" name="cost-max">
+                </label>
+              </p>
+            </fieldset>
+            <button class="btn btn-filter-form" type="submit">Показать</button>
+          </form>
         </section>
 
         <div class="sorting">
@@ -32,9 +84,9 @@
           <div class="sorting-by">
             <span class="sorting-caption">Сортировка:</span>
             <ul class="sorting-list">
-              <li class="active">По цене</li>
-              <li>По типу</li>
-              <li>По рейтингу</li>
+              <li class="active"><a href="#">По цене</a></li>
+              <li><a href="#">По типу</a></li>
+              <li><a href="#">По рейтингу</a></li>
             </ul>
           </div>
           <div class="arrows">
