--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         
       <footer class="index-footer">
         <div class="map">
-          <img src="img/map.png" width="1718" height="748" alt="Седона, штат Аризона, США">          
+          <img src="img/map1.png" width="1718" height="748" alt="Седона, штат Аризона, США">          
         </div>
         
         <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
