--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <img src="img/words.png" width="458" height="352" alt="Welcom to the gorgeous Sedona 'Because the Grand Canyon sucks!'">
         </div>
         <div class="promo">
-          <h1 class="main-title">Седона - небольшой городок в аризоне, заслуживающий большего!</h1>
+          <h1 class="main-title">Седона — небольшой городок в аризоне, заслуживающий большего!</h1>
           <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         </div>
         
@@ -135,19 +135,19 @@
           </p>
           <p>
             <label for="persons-adults">Взрослые: </label>
-            <button class="form-persons-plus" type="button">
+            <button class="form-persons-cange icon-plus" type="button">
               <span class="visually-hidden">Плюс</span>
             </button>  
             <input class="search-form-persons" id="persons-adults" type="number" name="adults" value="2">
-            <button class="form-persons-minus" type="button">
+            <button class="form-persons-cange icon-minus" type="button">
               <span class="visually-hidden">Минус</span>
             </button>
             <label for="persons-kids">Дети: </label>
-            <button class="form-persons-plus" type="button">
+            <button class="form-persons-cange icon-plus" type="button">
               <span class="visually-hidden">Плюс</span>
             </button> 
             <input class="search-form-persons" id="persons-kids" type="number" name="kids" value="0">
-            <button class="form-persons-minus" type="button">
+            <button class="form-persons-cange icon-minus" type="button">
               <span class="visually-hidden">Минус</span>
             </button>
           </p>
