--- a/index.html
+++ b/index.html
@@ -135,19 +135,19 @@
           </p>
           <p>
             <label for="persons-adults">Взрослые: </label>
-            <button class="form-persons-cange icon-plus" type="button">
+            <button class="form-persons-change icon-plus" type="button">
               <span class="visually-hidden">Плюс</span>
             </button>  
             <input class="search-form-persons" id="persons-adults" type="number" name="adults" value="2">
-            <button class="form-persons-cange icon-minus" type="button">
+            <button class="form-persons-change icon-minus" type="button">
               <span class="visually-hidden">Минус</span>
             </button>
             <label for="persons-kids">Дети: </label>
-            <button class="form-persons-cange icon-plus" type="button">
+            <button class="form-persons-change icon-plus" type="button">
               <span class="visually-hidden">Плюс</span>
             </button> 
             <input class="search-form-persons" id="persons-kids" type="number" name="kids" value="0">
-            <button class="form-persons-cange icon-minus" type="button">
+            <button class="form-persons-change icon-minus" type="button">
               <span class="visually-hidden">Минус</span>
             </button>
           </p>
