Сетка для страницы отелей

--- a/hotels.html
+++ b/hotels.html
@@ -61,6 +61,7 @@
                 </li>
               </ul>
             </fieldset>
+            <div class="filter-form-container">
             <fieldset class="filter-form-cost">
               <legend class="filter-form-title">Стоимость в сутки (Р):</legend>
               <div class="scale"> 
@@ -78,6 +79,7 @@
               </p>
             </fieldset>
             <button class="btn btn-filter-form" type="submit">Показать</button>
+            </div>
           </form>
         </section>
 
