--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
           </ul>
         </section>
 
-        <div class="offer-title">
-          <b>Заинтересовались?</b>
+        <div class="offer">
+          <b class="offer-title">Заинтересовались?</b>
           <p>
             Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне
           </p>
