--- a/hotels.html
+++ b/hotels.html
@@ -15,8 +15,8 @@
         <nav class="main-navigation">
           <ul class="site-navigation">
             <li><a href="info.html">Информация</a></li>
-            <li><a href="media.html">Фото и видео</a></li>
-            <li><a href="map.html">Карта штата</a></li>
+            <li class="shift-right"><a href="media.html">Фото и видео</a></li>
+            <li class="shift-left"><a href="map.html">Карта штата</a></li>
             <li class="site-navigation-current"><a href="hotels.html">Гостиницы</a></li>
           </ul>
         </nav>
@@ -31,15 +31,15 @@
               <legend class="filter-form-title">Инфраструктура:</legend>
               <ul>
                 <li class="filter-form-option">
-                  <input class="visually-hidden" type="checkbox" name="pool" id="filter-pool" checked>
+                  <input class="visually-hidden filter-input-checkbox" type="checkbox" name="pool" id="filter-pool" checked>
                   <label class="filter-form-label" for="filter-pool">Бассейн</label>
                 </li>
                 <li class="filter-form-option">
-                  <input class="visually-hidden" type="checkbox" name="parking" id="filter-parking">
+                  <input class="visually-hidden filter-input-checkbox" type="checkbox" name="parking" id="filter-parking">
                   <label class="filter-form-label" for="filter-parking">Парковка</label>
                 </li>
                 <li class="filter-form-option">
-                  <input class="visually-hidden" type="checkbox" name="wifi" id="filter-wifi">
+                  <input class="visually-hidden filter-input-checkbox" type="checkbox" name="wifi" id="filter-wifi">
                   <label class="filter-form-label" for="filter-wifi">Wi-Fi</label>
                 </li>
               </ul>
@@ -48,15 +48,15 @@
               <legend class="filter-form-title">Тип жилья:</legend>
               <ul>
                 <li class="filter-form-option">
-                  <input class="visually-hidden" type="checkbox" name="hotel" id="filter-hotel" checked>
+                  <input class="visually-hidden filter-input-checkbox" type="checkbox" name="hotel" id="filter-hotel" checked>
                   <label class="filter-form-label" for="filter-hotel">Гостиница</label>
                 </li>
                 <li class="filter-form-option">
-                  <input class="visually-hidden" type="checkbox" name="motel" id="filter-motel" checked>
+                  <input class="visually-hidden filter-input-checkbox" type="checkbox" name="motel" id="filter-motel" checked>
                   <label class="filter-form-label" for="filter-motel">Мотель</label>
                 </li>
                 <li class="filter-form-option">
-                  <input class="visually-hidden" type="checkbox" name="apartments" id="filter-apartments" checked>
+                  <input class="visually-hidden filter-input-checkbox" type="checkbox" name="apartments" id="filter-apartments" checked>
                   <label class="filter-form-label" for="filter-apartments">Апартаменты</label>
                 </li>
               </ul>
@@ -64,19 +64,21 @@
             <div class="filter-form-container">
               <fieldset class="filter-form-cost">
                 <legend class="filter-form-title">Стоимость в сутки (Р):</legend>
+                <p class="cost-range">
+                  <label class="cost-range-label">От
+                    <input class="cost-range-input" type="text" name="cost-min" value="0">
+                  </label>
+                  <label class="cost-range-label">До
+                    <input class="cost-range-input" type="text" name="cost-max" value="3000">
+                  </label>
+                </p>
                 <div class="scale"> 
-                  <div class="diapason"></div> 
+                  <div class="diapason">
+                    <div class="bar"></div>
+                  </div> 
                   <div class="toggle toggle-min"></div> 
                   <div class="toggle toggle-max"></div> 
                 </div>
-                <p class="cost-range">
-                  <label class="cost-range-label">От
-                    <input class="cost-range-input" type="text" name="cost-min">
-                  </label>
-                  <label class="cost-range-label">До
-                    <input class="cost-range-input" type="text" name="cost-max">
-                  </label>
-                </p>
               </fieldset>
               <button class="btn btn-filter-form" type="submit">Показать</button>
             </div>
