--- a/hotels.html
+++ b/hotels.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Гостиницы</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style-min.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -30,16 +31,16 @@
             <fieldset class="filter-form-group">
               <legend class="filter-form-title">Инфраструктура:</legend>
               <ul>
-                <li class="filter-form-option">
-                  <input class="visually-hidden filter-input-checkbox" type="checkbox" name="pool" id="filter-pool" checked>
+                <li class="filter-form-option" tabindex="0">
+                  <input class="filter-input-checkbox" type="checkbox" name="pool" id="filter-pool" checked>
                   <label class="filter-form-label" for="filter-pool">Бассейн</label>
                 </li>
-                <li class="filter-form-option">
-                  <input class="visually-hidden filter-input-checkbox" type="checkbox" name="parking" id="filter-parking">
+                <li class="filter-form-option" tabindex="0">
+                  <input class="filter-input-checkbox" type="checkbox" name="parking" id="filter-parking">
                   <label class="filter-form-label" for="filter-parking">Парковка</label>
                 </li>
-                <li class="filter-form-option">
-                  <input class="visually-hidden filter-input-checkbox" type="checkbox" name="wifi" id="filter-wifi">
+                <li class="filter-form-option" tabindex="0">
+                  <input class="filter-input-checkbox" type="checkbox" name="wifi" id="filter-wifi">
                   <label class="filter-form-label" for="filter-wifi">Wi-Fi</label>
                 </li>
               </ul>
@@ -47,16 +48,16 @@
             <fieldset class="filter-form-group">
               <legend class="filter-form-title">Тип жилья:</legend>
               <ul>
-                <li class="filter-form-option">
-                  <input class="visually-hidden filter-input-checkbox" type="checkbox" name="hotel" id="filter-hotel" checked>
+                <li class="filter-form-option" tabindex="0">
+                  <input class="filter-input-checkbox" type="checkbox" name="hotel" id="filter-hotel" checked>
                   <label class="filter-form-label" for="filter-hotel">Гостиница</label>
                 </li>
-                <li class="filter-form-option">
-                  <input class="visually-hidden filter-input-checkbox" type="checkbox" name="motel" id="filter-motel" checked>
+                <li class="filter-form-option" tabindex="0">
+                  <input class="filter-input-checkbox" type="checkbox" name="motel" id="filter-motel" checked>
                   <label class="filter-form-label" for="filter-motel">Мотель</label>
                 </li>
-                <li class="filter-form-option">
-                  <input class="visually-hidden filter-input-checkbox" type="checkbox" name="apartments" id="filter-apartments" checked>
+                <li class="filter-form-option" tabindex="0">
+                  <input class="filter-input-checkbox" type="checkbox" name="apartments" id="filter-apartments" checked>
                   <label class="filter-form-label" for="filter-apartments">Апартаменты</label>
                 </li>
               </ul>
