--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Седона</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style-min.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -40,10 +40,10 @@
             <li class="features-item">
               <h3 class="features-title">Настоящий городок</h3>
               <p class="features-number">
-                &ndash; №1 &ndash;
+                &mdash; №1 &mdash;
               </p>
               <p class="features-description">
-                Седона - не аттракцион для туристов, там течет своя жизнь
+                Седона — не аттракцион для туристов, там течет своя жизнь
               </p>
             </li>
             <li class="features-image">
@@ -75,7 +75,7 @@
             <li class="features-item">
               <h3 class="features-title">Там есть<br> мост дьявола</h3>
               <p class="features-number">
-                &ndash; №2 &ndash;
+                &mdash; №2 &mdash;
               </p>
               <p class="features-description">
                 Да, по нему можно пройти! Если конечно вы осмелитесь
@@ -85,7 +85,7 @@
             <li class="features-item features-item-gray">
               <h3 class="features-title">Небольшая площадь</h3>
               <p class="features-number">
-                &ndash; №3 &ndash;
+                &mdash; №3 &mdash;
               </p>
               <p class="features-description">
                 Все достопримечательности находятся очень близко
@@ -94,7 +94,7 @@
             <li class="features-item features-item-gray">
               <h3 class="features-title">Красивая дорога</h3>
               <p class="features-number">
-                &ndash; №4 &ndash;
+                &mdash; №4 &mdash;
               </p>
               <p class="features-description">
                 Ехать в седону из Лас-Вегаса совсем не скучно!
@@ -103,7 +103,7 @@
             <li class="features-item features-item-gray">
               <h3 class="features-title">Мало туристов</h3>
               <p class="features-number">
-                &ndash; №5 &ndash;
+                &mdash; №5 &mdash;
               </p>
               <p class="features-description">
                 Большинство едет в Гранд Каньон и толпится там
@@ -138,7 +138,7 @@
           </p> 
           
           <p class="date-block">
-            <label for="date-departure">Дата заезда: </label>
+            <label for="date-departure">Дата выезда: </label>
             <input class="search-form-date" id="date-departure" type="text" name="departure" value="4 июля 2017">
             <button class="form-calendar" type="button">
               <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
@@ -202,6 +202,6 @@
       </footer>
     </div>
     
-    <script src="js/script.js"></script>
+    <script src="js/script-min.js"></script>
   </body>
 </html>
