Исправил дополнительные критерии

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <p>
             Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне
           </p>
-          <button class="btn btn-search">Поиск гостиницы в Седоне</button>
+          <a class="btn btn-search" href="search-form.html">Поиск гостиницы в Седоне</a>
         </div>
       </main>
         
