--- a/hotels.html
+++ b/hotels.html
@@ -31,34 +31,34 @@
             <fieldset class="filter-form-group">
               <legend class="filter-form-title">Инфраструктура:</legend>
               <ul>
-                <li class="filter-form-option" tabindex="0">
+                <li class="filter-form-option">
                   <input class="filter-input-checkbox" type="checkbox" name="pool" id="filter-pool" checked>
-                  <label class="filter-form-label" for="filter-pool">Бассейн</label>
+                  <label class="filter-form-label" for="filter-pool" tabindex="0">Бассейн</label>
                 </li>
-                <li class="filter-form-option" tabindex="0">
+                <li class="filter-form-option">
                   <input class="filter-input-checkbox" type="checkbox" name="parking" id="filter-parking">
-                  <label class="filter-form-label" for="filter-parking">Парковка</label>
+                  <label class="filter-form-label" for="filter-parking" tabindex="0">Парковка</label>
                 </li>
-                <li class="filter-form-option" tabindex="0">
+                <li class="filter-form-option">
                   <input class="filter-input-checkbox" type="checkbox" name="wifi" id="filter-wifi">
-                  <label class="filter-form-label" for="filter-wifi">Wi-Fi</label>
+                  <label class="filter-form-label" for="filter-wifi" tabindex="0">Wi-Fi</label>
                 </li>
               </ul>
             </fieldset>
             <fieldset class="filter-form-group">
               <legend class="filter-form-title">Тип жилья:</legend>
               <ul>
-                <li class="filter-form-option" tabindex="0">
+                <li class="filter-form-option">
                   <input class="filter-input-checkbox" type="checkbox" name="hotel" id="filter-hotel" checked>
-                  <label class="filter-form-label" for="filter-hotel">Гостиница</label>
+                  <label class="filter-form-label" for="filter-hotel" tabindex="0">Гостиница</label>
                 </li>
-                <li class="filter-form-option" tabindex="0">
+                <li class="filter-form-option">
                   <input class="filter-input-checkbox" type="checkbox" name="motel" id="filter-motel" checked>
-                  <label class="filter-form-label" for="filter-motel">Мотель</label>
+                  <label class="filter-form-label" for="filter-motel" tabindex="0">Мотель</label>
                 </li>
-                <li class="filter-form-option" tabindex="0">
+                <li class="filter-form-option">
                   <input class="filter-input-checkbox" type="checkbox" name="apartments" id="filter-apartments" checked>
-                  <label class="filter-form-label" for="filter-apartments">Апартаменты</label>
+                  <label class="filter-form-label" for="filter-apartments" tabindex="0">Апартаменты</label>
                 </li>
               </ul>
             </fieldset>
